More fixes on color contrast accesibility issues acording to WCAG 2.1 AA SC 1.4.3 Test for Color Contrast

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -146,13 +146,21 @@
 
 	a {
 		text-decoration: underline;
-		color: #015C89;
+		color: #375695;
 	}
 
 		a:hover {
 			text-decoration: none;
 			color: #019be3;
 		}
+
+		a.contrast {
+			color: #FFFF80;
+		}
+
+			a.contrast:hover {
+				color: #FFFF80;
+			}
 
 	strong, b {
 		font-weight: 700;
